# Meta_codeblasters

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  HOSTED_VALIDATION_CHECKLIST.md  JUDGE.md  PENDING_WORK_TRACKER.md  README.md  WORK_DISTRIBUTION_TUSHYA_SHIVANSH.md  app_ui.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: deploy-to-hf-space.yml  sync_to_hf.yml
app/: __init__.py  environment.py  main.py  models.py
graders/: __init__.py  grader.py
server/: app.py  environment.py  models.py
server/data/scenarios/: scenarios.py
