[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-env"
version = "1.0.0"
description = "Production Incident Triage Environment for LLM Agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "openai>=1.6.0",
    "pyyaml>=6.0",
    "gradio>=5.0.0",
]

[tool.setuptools]
packages = ["app", "data", "graders"]

[tool.uv]
managed = true
