[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-env"
version = "1.0.0"
description = "Production Incident Triage Environment for LLM Agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "openai>=1.6.0",
    "pyyaml>=6.0",
    "gradio>=5.0.0",
    "openenv-core>=0.1.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]

[tool.uv]
managed = true
